--- a/index.html
+++ b/index.html
@@ -5,26 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
     <link rel="stylesheet" href="styles.css">
+    <script type="module" src="index.js"></script>
 </head>
 <body>
-    <form class="form">
+    <form id="searchForm" class="form">
         <input id="search" type="text" class="input" placeholder="Location..."/>
         <button id="searchbtn">Search</button>
     </form>
-    <div id="content">
-        <div class="currentConditionWrapper">
-            <h2 id="currentCondition">Toulouse</h2>
-            <h3 id="currentTemp">13</h3>
-            <img src="./icons/day/113.png" id="currentConditionIcon">
-        </div>
-        <div class="forecast3days">
-            <h3>3 Day Forcast</h1>
-            <div class="dayForecast" id="day1"></div>
-            <div class="dayForecast" id="day2"></div>
-            <div class="dayForecast" id="day3"></div>
-        </div>
+    <div class="currentCondition wrapper">
+        <h2 id="city"></h2>
+        <h3 id="currentCondition"></h3>
+        <h3 id="currentTemp"></h3>
+        <img src="./icons/day/113.png" id="currentConditionIcon">
     </div>
+    <!-- <div class="forecast3days wrapper">
+        <h3>3 Day Forcast</h1>
+        <div class="dayForecast" id="day1"></div>
+        <div class="dayForecast" id="day2"></div>
+        <div class="dayForecast" id="day3"></div>
+    </div> -->
 </body>
-<script src="weather_conditions.json"></script>
-<script type="module" src="index.js"></script>
 </html>
