--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h2 id="city"></h2>
         <h3 id="currentCondition"></h3>
         <h3 id="currentTemp"></h3>
-        <img src="./icons/day/113.png" id="currentConditionIcon">
+        <img src="#" id="currentConditionIcon">
     </div>
     <!-- <div class="forecast3days wrapper">
         <h3>3 Day Forcast</h1>
