--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <script type="module" src="index.js"></script>
 </head>
 <body>
+    <h1>Weather ⚡️🌪️ </h1>
     <form id="searchForm" class="form">
-        <input id="search" type="text" class="input" placeholder="Location..."/>
+        <input id="search" type="text" class="input" placeholder="Location..." autocomplete="off"/>
         <button id="searchbtn">Search</button>
     </form>
     <div class="currentCondition wrapper">
@@ -18,11 +19,6 @@
         <h3 id="currentTemp"></h3>
         <img src="#" id="currentConditionIcon">
     </div>
-    <!-- <div class="forecast3days wrapper">
-        <h3>3 Day Forcast</h1>
-        <div class="dayForecast" id="day1"></div>
-        <div class="dayForecast" id="day2"></div>
-        <div class="dayForecast" id="day3"></div>
-    </div> -->
+
 </body>
 </html>
